<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tripCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/altura_cardview"
    cardview:cardCornerRadius="@dimen/esquina_radio"
    android:layout_marginBottom="@dimen/separacion_boletos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="@dimen/width_fotoperfil"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fotoPerfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/perfil" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/width_zona"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/zona"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_zona"
                android:text="@string/zonaX"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/textsize_zona"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/ruta"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_ruta"
                android:text="@string/lorem"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textsize_ruta"
                android:textStyle="italic"
                android:paddingLeft="@dimen/padding_left_ruta"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/width_fotoperfil"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/disponibles"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_disponibles"
                android:text="@string/lugares"
                android:textColor="@color/colorDisponibles"
                android:textSize="@dimen/textsize_disponibles"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/lugares"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_lugares"
                android:text="@string/numero_lugares"
                android:textColor="@color/colorAccent2"
                android:textSize="@dimen/textsize_zona"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/apartar"
                android:layout_width="@dimen/width_boton"
                android:layout_height="@dimen/height_boton"
                android:text="@string/comprar"
                android:theme="@style/RaisedButtonDarkComprar"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>